--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@ body {
 }
 
 header {
-    background: #333;
+    background: #070451;
     color: #fff;
     padding-top: 30px;
-    min-height: 70px;
-    border-bottom: #77aaff 3px solid;
+    min-height: 50px;
+    border-bottom: #f4f4f4 3px solid;
 }
 
     header a {
@@ -44,22 +44,54 @@ header {
         margin-top: 10px;
     }
 
-.showcase {
-    min-height: 400px;
-    background: url('professional-photo.jpg') no-repeat 0 -400px;
-    text-align: center;
-    color: #fff;
+.headshot {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
+    background-color: #fff;
 }
 
-    .showcase h1 {
-        margin-top: 100px;
-        font-size: 55px;
-        margin-bottom: 10px;
+.headshot-content {
+    display: flex;
+    align-items: center;
+    text-align: left;
+    justify-content: center;
+    /*put a border around the content*/
+    border: 5px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
+    background: #f4f4f4;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    max-width: 800px;
+    margin: 0 auto;
+    border-color: #070451;
+}
+
+.headshot-img {
+    width: 200px;
+    height: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.intro-text {
+    max-width: 600px;
+}
+
+    .intro-text h2 {
+        margin-top: 0;
+        font-size: 2rem;
     }
 
-    .showcase p {
-        font-size: 20px;
+    .intro-text p {
+        font-size: 1rem;
+        line-height: 1.5;
+        margin: 10px 0;
     }
+
 
 .content {
     padding: 20px;
@@ -97,7 +129,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: #070451;
     padding: 1rem;
     position: fixed;
     width: 100%;
@@ -119,6 +151,7 @@ body {
 
 .nav-item {
     margin-left: 1rem;
+    margin-right: 4px;
 }
 
 .nav-link {
